--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mern_auth": "file:",
+    "modulename": "^0.0.4",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
   }
 }
